homework/5.kubernetes-network/deploy-redmine.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  labels:
    app: redmine
  namespace: gb5
spec:
  replicas: 1
  selector:
    matchLabels:
      project: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        project: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 200m
            memory: 500Mi
          limits:
            cpu: 400m
            memory: 1000Mi
