homework/5.kubernetes-network/service-postgresql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    svc: posgresql
  namespace: gb5
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    project: postgres
  type: ClusterIP
