homework/5.kubernetes-network/service-redmine.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-redmine
  labels:
    svc: redmine
  namespace: gb5
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    project: redmine
  type: ClusterIP
