homework/5.kubernetes-network/ingress-redmine.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redmine
  labels:
    ingress: nginx
  namespace: gb5
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: service-redmine
            port:
              number: 3000
